--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
+  "scripts": {
+    "start": "live-server"
+  },
   "devDependencies": {
-    "elocuent": "^0.0.4"
+    "elocuent": "^0.0.4",
+    "live-server": "^1.2.2"
   }
 }
